# MI-Research

./: .env  .gitignore  GATES.md  LANDMINES.md  PIPELINE.md  README.md  TEAM_GUIDE.md  fullrun1.md  pilotrun1.md  pyproject.toml  repo_audit_report.md  steering_arad_vs_phase2.md  validation_neg_alpha_analysis.md
.claude/: settings.local.json
archive/: README.md
configs/: base.yaml
data/: capitals_only.csv  control_only.csv  planets_only.csv  xdom_attributes.csv  xdom_facts.csv
docs/: 20260316_it_refusal_ablation_results.md  20260319_salad_refusal_geometry_continuous_target_results.md  TEAM_GUIDE.md  arad_codebase_review.md  it_refusal_ablation_results.md  steering_changes_and_papers.md
scripts/: 01_choose_features.py  02_presteering_metrics.py  03_steerability.py  04_offtarget.py  05_analysis.py  10_phase2_smoke_ontarget.py  11_phase2_prefilter_features.py  11b_phase2_prefilter_logit.py  99_hook_sanity.py  analyze_geometry.py  audit_activations.py  check_feature_overlap.py  compute_alignment_mean_target.py  compute_output_scores.py  debug_steer_effect.py  debug_steering.py  make_domain_splits.py  make_feature_sets.py  make_phase2_csvs.py  phase1_smoke.py  phase2_run.py  phase2_sanity_plot.py  phase2_select_contrast.py  phase3_predict_cv.py  phase3_predict_cv_np.py  phase3_predictability.py  plot_results.py  predict_cv.py  predict_cv_np.py  prepare_prompts.py  prepare_salad_bench.py  rescore.py  rescore_pilot.py  rescore_soft.py  run_sweep.py  select_features.py  smoke_test_amax.py  verify_target.py
src/: __init__.py  config.py  hook_resolver.py  memeaa.py  (+3 more)
(+54 files in other folders)
