[project]
name = "mi-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "huggingface-hub>=0.36.0",
    "matplotlib>=3.10.8",
    "numpy<2",
    "pandas>=2.3.3",
    "patsy>=0.5.0",
    "statsmodels>=0.14.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "torch==2.2.2",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
